# uart_arduino

./: README.md
sw arduino/: prova1.ino
sw python/: .anjuta_sym_db.db  Makefile.am  configure.ac
sw python/.anjuta/session/: anjuta.session  dock-layout.xml
sw python/src/: Makefile.am  prova.py  prova.py~  prova.ui
